--- a/index.css
+++ b/index.css
@@ -8,11 +8,13 @@ a {
   text-decoration: none;
 }
 
-h1 {
+h1,
+h3 {
   font-size: 1.5em;
   margin: 0;
 }
 
+footer,
 nav {
   display: flex;
   flex-direction: row;
@@ -20,6 +22,22 @@ nav {
   justify-content: space-between;
   border: 2px solid darkslategray;
   padding: 10px;
+}
+
+footer {
+  height: 5vh;
+}
+
+header {
+  height: 15vh;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 72vh;
 }
 
 .menuList {
