--- a/index.css
+++ b/index.css
@@ -36,7 +36,6 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 72vh;
 }
 
@@ -81,6 +80,28 @@ button {
   align-self: flex-end;
   box-shadow: 2px 2px 2px darkslategray;
   font-weight: bold;
+}
+
+.bookList {
+  border: 2px solid darkslategray;
+  list-style-type: none;
+  min-height: 40px;
+  padding: 0;
+  width: 50%;
+}
+
+.bookList li { background: white; }
+.bookList li:nth-child(odd) { background: lightgray; }
+
+.book {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  gap: 20px;
+  height: 40px;
+  padding: 8px;
 }
 
 .hidden {
